--- a/app/templates/messages/sent.html
+++ b/app/templates/messages/sent.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Moje správy | {{config.site.lema}}{% endblock %}
+{% block title %}{{_("My messages")}} | {{config.site.lema}}{% endblock %}
 
 {% block navbar %}
 {% endblock %}
