--- a/app/templates/subs.html
+++ b/app/templates/subs.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Subs | {{config.site.lema}}{% endblock %}
+{% block title %}{{_('Subs')}} | {{config.site.lema}}{% endblock %}
 {% block navbar %}
 
 {% if ptype == 'tagmatch' %}
