--- a/app/static/css/dark.css
+++ b/app/static/css/dark.css
@@ -56,9 +56,9 @@ body.dark .postflair {
 }
 
 body.dark .user_flair {
-  background-color: #0d0d0d;
+  background-color: #202225;
   border: 1px solid #1d1d1d;
-  color: #888;
+  color: #c1c1c1;
 }
 
 /* Hot, Top, New, Domain */
@@ -807,6 +807,10 @@ body.dark .uploaditem.deleted {
 
 body.dark .deleted-user {
   background-color: #36393f;
+}
+
+body.dark .deleted-comment {
+  background-color: #202225;
 }
 
 body.dark .browse-history {
