--- a/app/templates/admin/post.html
+++ b/app/templates/admin/post.html
@@ -19,8 +19,8 @@
     <div class="col-12 admin section users">
       <h2><i class="fa fa-list"></i> Post: <a href="{{url_for('site.view_post_inbox', pid=post.pid)}}">{{post.title}}</a></h2>
       <div>
+        <div>Posted: <i class="fa fa-clock-o" aria-hidden="true"></i><time-ago datetime="{{post.posted.isoformat()}}Z"></time-ago></div>
         <div>NSFW: {% if post.nsfw %}<span class="bgred" alt="Not safe for work">NSFW</span>{% else %}no{% endif %}</div>
-        <div>When: <i class="fa fa-clock-o" aria-hidden="true"></i> Posted <time-ago datetime="{{post.posted.isoformat()}}Z"></time-ago></div>
         <div>Sub: <a href="{{url_for('sub.view_sub', sub=sub.name)}}">{{sub.name}}</a></div>
       </div>
     </div>
@@ -28,7 +28,7 @@
       <h2>User: <a href="{{url_for('user.view', user=user.name)}}">{{user.name}}</a></h2>
       <div class="col-11">Posts: {{pcount}}</div>
       <div class="col-11">Comments: {{ccount}}</div>
-      <div class="col-11">Registered: {{user.joindate}}</div>
+      <div class="col-11">Registered: <time-ago datetime="{{user.joindate.isoformat()}}Z"></time-ago></div>
       <div class="col-11">Level: {{func.get_user_level(user.uid)[0]}}</div>
     </div>
     <div class="col-12 admin section users">
@@ -39,7 +39,7 @@
             <tr>
               <th>vote</th>
               <th>user</th>
-              <th>datetime</th>
+              <th>when</th>
             </tr>
           </thead>
           <tbody>
@@ -47,7 +47,7 @@
             <tr>
               <td>{% if vote.positive %}<span class="upvoted">up</span>{% else %}<span class="downvoted">down</span>{% endif %}</td>
               <td><a href="{{url_for('user.view', user=vote.name)}}">{{vote.name}}</a></td>
-              <td>{{vote.datetime}}</td>
+              <td><time-ago datetime="{{vote.datetime.isoformat()}}Z"></time-ago></td>
             </tr>
             {% endfor %}
           </tbody>
