--- a/app/templates/admin/posts.html
+++ b/app/templates/admin/posts.html
@@ -14,7 +14,7 @@
   <form action="{{ url_for('do.search', stype='admin.post') }}" method="post">
   <span class="search">
       <span><i class="fa fa-search"></i></span>
-      <input id="term" name="term" type="search" placeholder="Post number...">
+      <input id="term" name="term" type="number" placeholder="Post number...">
       <span>
         <button class="pure-button" type="submit">Submit</button>
       </span>
@@ -52,7 +52,7 @@
             {% for post in posts %}
               <tr class="{% if post.deleted != 0 %}deletedrow{% endif %}">
                 <td><a href="{{url_for('admin.post_search', term=post.pid)}}">{{post.pid}}</a></td>
-                <td><time-ago datetime="{{post.posted.isoformat()}}Z"></time-ago></td>
+                <td class="convert-date"><time-ago datetime="{{post.posted.isoformat()}}Z"></time-ago></td>
                 <td>{{post.score}}</td>
                 <td><a href="{{url_for('site.view_post_inbox', pid=post.pid)}}">{{post.title|truncate(30, True)}}</a></td>
                 <td><a href="{{url_for('user.view', user=post.user)}}">{{post.user}}</a></td>
