Visual tweaks on All subs page

--- a/app/static/css/dark.css
+++ b/app/static/css/dark.css
@@ -74,7 +74,7 @@ body.dark div#sortbuttons {
 
 body.dark a:hover,
 body.dark #sortbuttons a:hover {
-  color: #4f5d66;
+  color: #697e8b;
 }
 
 body.dark .post .domain a,
