--- a/app/static/css/dark.css
+++ b/app/static/css/dark.css
@@ -342,22 +342,22 @@ body.dark .post:nth-child(2n) .expandotxt {
 
 body.dark .pure-control-group label,
 body.dark .form label {
-  color: #526a7d;
+  color: #dcd8d9;
 }
 
 body.dark input[type="text"]:not(.numInput),
 body.dark input[type="email"],
 body.dark input[type="url"],
-body.dark textarea,
 body.dark input[type="password"],
 body.dark select {
-  color: black;
+  color: #dcd8d9;
   background-color: #40444b;
   box-shadow: inset 0 1px 3px #303030;
   border-color: #444;
 }
 
 body.dark textarea {
+  color: black;
   background-color: #a0a0a0;
 }
 
@@ -763,7 +763,13 @@ body.dark .sidebar .pure-button-primary:hover {
   background-color: #282828;
 }
 
+body.dark .message {
+    background-color: transparent;
+}
 
+body.dark #center-container-savedcomments {
+    background-color: transparent;
+}
 /* poll */
 body.dark .poll-pbar {
   background-color: #4a4a4a;
