--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -26,7 +26,7 @@
     <meta name="msapplication-navbutton-color" content="white" />
     <meta name="msapplication-TileColor" content="#b91d47" />
     <meta name="msapplication-config" content="{{ url_for('static', filename='browserconfig.xml') }}" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="white-translucent" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='img/apple-touch-icon.png') }}" />
