Introducing private subs

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1048,6 +1048,19 @@ a.slink {
   padding: 0 .25em;
 }
 
+.private {
+  display: inline-block;
+  vertical-align: super;
+  padding: 3px;
+  background-color: transparent;
+  border-radius: 4px;
+  color: #e22;
+  font-size: 12px;
+  line-height: 12px;
+  margin-right: .3em;
+  border: 1px solid #e22;
+}
+
 .nsfw {
   display: inline-block;
   padding: 3px;
