--- a/app/templates/admin/sidebar.html
+++ b/app/templates/admin/sidebar.html
@@ -10,7 +10,7 @@
 <a href="{{url_for('admin.reports')}}" class="sbm-post pure-button">Reports</a>
 <hr>
 <a href="{{url_for('admin.user_uploads')}}" class="sbm-post pure-button">Uploads</a>
-<a href="{{url_for('admin.wiki')}}" class="sbm-post pure-button">Wiki</a>
+<a href="{{url_for('admin.wiki')}}" class="sbm-post pure-button">Wikis</a>
 <a href="{{url_for('admin.domains', domain_type='link')}}" class="sbm-post pure-button">Banned Domains</a>
 <a href="{{url_for('admin.domains', domain_type='email')}}" class="sbm-post pure-button">Banned Email Domains</a>
 <hr>
