--- a/app/templates/messages/nav.html
+++ b/app/templates/messages/nav.html
@@ -1,8 +1,8 @@
 <div class="msgnav">
   {% if messages|length == 20 %}
-    <a href="{{url_for(box_route, page=(page+1))}}" class="pure-button">⮜ {{_('Next')}}</a>
+    <a href="{{url_for(box_route, page=(page+1))}}" class="pure-button">{{_('Next')}}</a>
   {% endif %}
   {% if page > 1 %}
-    <a href="{{url_for(box_route, page=(page-1))}}" class="pure-button alldarightinbox">{{_('Previous')}} ⮞</a>
+    <a href="{{url_for(box_route, page=(page-1))}}" class="pure-button alldarightinbox">{{_('Previous')}}</a>
   {% endif %}
 </div>
