--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -736,7 +736,7 @@ a.pure-button-primary {
 
 .misctainer {
   float: left;
-  padding: 0 .2em 0 .6em;
+  padding: 0 .2em 0 .1em;
 }
 
 .pbody {
@@ -907,13 +907,23 @@ iframe {
 }
 
 .votebuttons {
-  height: 100%;
-  width: 35px;
-  max-height: 70px;
-  padding: 0.15em 0.2em 0em 0.2em;
-  float: left;
-  position: relative;
-  right: 5px;
+    display: inline-block;
+    height: 100%;
+    width: 40px;
+    max-height: 70px;
+    padding: 0.15em 0.2em 0em 0.2em;
+    margin-right: 3px;
+    float: left;
+}
+
+@media only screen and (max-width: 915px) {
+
+    .votebuttons {
+      width: 40px;
+      margin-right: 0px;
+      position: relative;
+      right: 5px;
+    }
 }
 
 .score {
@@ -1867,7 +1877,7 @@ li.new-item {
   }
 
   .pbody {
-    width: calc(100% - 105px);
+    width: calc(100% - 110px);
   }
 
   .content.wiki {
