--- a/app/templates/admin/uploads.html
+++ b/app/templates/admin/uploads.html
@@ -17,33 +17,46 @@
 {{ super() }}
 {% if not uploads %}<h3 class="notfound">There are no uploads, yet.</h3>{% endif %}
 <div id="center-container">
-  <div class="uploads content">
-      {% for item in uploads %}
-        <div class="uploaditem {{'deleted' if item.deleted != 0 else '' }}">
-          <div class="uploadthumb">
-            {% if item.thumbnail == '' %}
-              <span class="placeholder" data-icon="link"></span>
-            {% elif item.thumbnail == 'deferred' %}
-              <span class="placeholder deferred" data-icon="link"
-                    data-deferred="UserUploads-{{ item.xid }}"></span>
-            {% else %}
-              <img class="lazy" src="{{ url_for('static', filename='img/1x1.gif') }}"
-                   data-src="{{ thumbnail_url(item.thumbnail) }}"/>
-            {% endif %}
-          </div>
-          <div class="uploadlinks">
-            <div class="uploadlink"><a href="{{url_for('site.view_post_inbox', pid=item.pid)}}">View Post</a></div>
-            <div class="uploadlink"><a href="{{file_url(item.fileid)}}">Direct Link</a></div>
-          </div>
-        </div>
-      {% endfor %}
-  </div>
+    <table class="uploads-table">
+        <thead>
+            <tr>
+                <th>User</th>
+                <th>Thumbnail</th>
+                <th>Post</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for item in uploads %}
+            <tr class="{{ 'deleted' if item.deleted != 0 else '' }}">
+                <td>
+                    <a href="{{ url_for('user.view', user=item.name) }}">{{ item.name }}</a>
+                </td>
+                <td>
+                    <a href="{{ file_url(item.fileid) }}" class="upload-thumb">
+                        {% if item.thumbnail == '' %}
+                            <span class="placeholder" data-icon="link"></span>
+                        {% elif item.thumbnail == 'deferred' %}
+                            <span class="placeholder deferred" data-icon="link"
+                                  data-deferred="UserUploads-{{ item.xid }}"></span>
+                        {% else %}
+                            <img class="lazy" src="{{ url_for('static', filename='img/1x1.gif') }}"
+                                 data-src="{{ thumbnail_url(item.thumbnail) }}"/>
+                        {% endif %}
+                    </a>
+                </td>
+                <td>
+                    <a href="{{ url_for('site.view_post_inbox', pid=item.pid) }}">View Post</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
 <div class="col-12">
   {% if page > 1 %}
     <a href="{{url_for('admin.user_uploads', page=(page-1))}}" class="pure-button">prev</a>
   {% endif %}
-  {% if uploads|length == 60 %}
+  {% if uploads|length == 30 %}
     <a href="{{url_for('admin.user_uploads', page=(page+1))}}" class="pure-button">next</a>
   {% endif %}
 </div>
