--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -74,6 +74,10 @@ blockquote {
   display: inline-block;
 }
 
+.editbtns div[data-icon="image"] {
+    transition: opacity 0.3s ease;
+}
+
 .announcement {
   padding: 3px;
   margin-right: .5em;
