--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -367,6 +367,8 @@ a:hover {
 
 div#sortbuttons {
   display: inline-block;
+  margin-left: 80%;
+  width: max-content;
 }
 
 #center-container {
@@ -445,8 +447,9 @@ div#sortbuttons {
 #container {
   padding-top: .5em;
   padding-left: .5em;
-  width: 100%;
-  background: linear-gradient(270deg, #ffffff 85%, #f1f1f1 100%);
+  padding-right: .5em;
+  /* width: 100%;
+  background: linear-gradient(270deg, #ffffff 85%, #f1f1f1 100%); */
 }
 
 .error {
@@ -785,10 +788,11 @@ a.pure-button-primary {
   background: #fff;
   display: inline-block;
   width: calc(100% - 130px);
-  padding: 5px 10px 5px 5px;
+  padding: 5px 10px 5px 10px;
   border: 1px solid #dfdfdf;
   border-radius: 3px;
-/*  box-shadow: -5px 5px 12px 0px rgb(0 0 0 / 10%);*/
+  cursor: pointer;
+  user-select: none;
 }
 
 .pbody:hover {
@@ -912,7 +916,7 @@ iframe {
   height: 70px;
   text-align: center;
   position: relative;
-  right: 5px;
+  right: 8px;
 }
 
 .post .thumbnail img {
@@ -1021,8 +1025,7 @@ iframe {
 
 .expandotxt {
   /*  background-color: #e1e1e1; */
-  padding: 0.25em 0.7em 1em 1em;
-  margin-left: 24px;
+  padding: 0.25em 0.7em 1em 0em;
   position: relative;
 }
 
@@ -1180,7 +1183,7 @@ img.block-blur {
 
 .stickyposts {
   border-bottom: 1px solid #efefef;
-  background: linear-gradient(270deg, #ffffff 85%, #f1f1f1 100%);
+  /* background: linear-gradient(270deg, #ffffff 85%, #f1f1f1 100%); */
 }
 
 .stickyposts .links a.comments {
@@ -1224,6 +1227,7 @@ img.block-blur {
   .expandotxt {
     margin-left: 0px;
   }
+
 }
 
 .postinfo {
@@ -1658,8 +1662,8 @@ span.hasmail {
 /* alldaposts */
 
 .alldaposts {
-  background-color: #faf9f8;
-  background: linear-gradient(270deg, #ffffff 85%, #f1f1f1 100%);
+ /* background-color: #faf9f8;
+  background: linear-gradient(270deg, #ffffff 85%, #f1f1f1 100%); */
 }
 
 .alldaposts .links a {
@@ -1716,7 +1720,7 @@ a.pure-button.alldarightcomments {
 /* SIDEBAR STYLES */
 
 .sidebar {
-  padding: 1em 5px 5px 5px;
+  padding: 10px 14px 5px 14px;
   overflow-wrap: break-word;
   border-left: solid 1px #cdcdcd;
   border-right: dotted 1px #cdcdcd;
@@ -1729,6 +1733,10 @@ a.pure-button.alldarightcomments {
   padding-right: 0.5em;
   font-size: 0.9em;
   color: #222222 !important;
+}
+
+.nobar {
+ /*   background: linear-gradient(0deg, #ffffff 30%, #e7e7e7 100%); */
 }
 
 /* mods */
@@ -2011,7 +2019,7 @@ li.new-item {
 }
 
 .postbar.post .expandotxt {
-  margin-left: 0px;
+  margin-left: 15px;
 }
 
 .wholepost .title {
@@ -2075,16 +2083,31 @@ li.new-item {
   padding: 0em 1em 1em .7em;
 }
 
-.expandotxt p {
-  margin-left: .7em;
-}
-
 .post-content-container textarea,
 .commblock textarea,
 .comment-form textarea {
   resize: both;
   width: 100%;
   overflow: auto;
+}
+
+/* Style for the content to fade out */
+.expando-master .fade-out-content {
+  position: relative;
+  max-height: 500px; /* Limit content height */
+  overflow: hidden;
+  display: block;
+}
+
+.expando-master .fade-out-content::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 150px; /* Increased height for a smoother fade-out effect */
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1)); /* Fade from fully transparent to fully white */
+  pointer-events: none; /* Ensure the gradient doesn't block interactions */
 }
 
 .cwrap,
@@ -3128,7 +3151,7 @@ a[href="#toodamncool"] {
 .subsort_item {
   cursor: move;
   padding: 10px 40px;
-  width: 32em;
+  width: 20em;
   background: rgba(0, 0, 0, .1)
 }
 
@@ -3494,6 +3517,11 @@ article.text-post.comment.deleted {
   .banner-text-link {
     font-size: 18px;
   }
+
+  div#sortbuttons {
+    margin-left: 0px;
+  }
+
 }
 
 .edited {
@@ -3877,6 +3905,6 @@ li.mod-table-header {
 
   .pure-u-md-1-4,
   .pure-u-md-6-24 {
-    width: 20%;
+  width: 20%;
   }
 }
