Implementing a lite YouTube embed

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -829,8 +829,10 @@ iframe {
 }
 
 .expando-wrapper {
-	display: inline-block;
-	will-change: height;
+/*	display: inline-block;
+	will-change: height; */
+	position: relative;
+	padding-bottom: 56.25%;  /* 16:9 aspect ratio */
 }
 
 .thumbnail .placeholder svg path {
