--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1616,9 +1616,9 @@ li.new-item {
 .post-content-container, .post-content-link-container {
 	background: #fafafa;
 	color: #222;
-	border: 1px solid #369;
+	border: 1px solid var(--primary-color);
 	border-radius: 7px;
-	margin-left: 3.9em;
+	margin-left: 1.1em;
 	margin-right: 1.1em;
 	margin-bottom: 2em;
 	padding: 5px 10px;
@@ -1629,7 +1629,7 @@ li.new-item {
 }
 
 .post-content-link-container {
-	margin-left: 2.9em;
+	margin-left: 1.4em;
 }
 
 .post-content-container-nocontent {
