--- a/app/static/css/variables.css
+++ b/app/static/css/variables.css
@@ -17,7 +17,7 @@
     Color for visited links.
     Phuks: #d95204
      */
-    --post-link-visited: #848484;
+    --post-link-visited: #5c6c74;
 
     /*
     Used only in the chatbox at the moment
