--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -618,7 +618,7 @@ span#notification.fade {
 	background: #fff;
 	display: inline-block;
 	width: calc(100% - 130px);
-	padding: 5px 10px;
+    padding: 7px 10px 5px 10px;
 	border: 1px solid #dfdfdf;
 	border-radius: 3px;
 }
@@ -887,6 +887,10 @@ a#prevp {
 	margin-bottom: .6em;
 }
 
+.subname {
+	width: fit-content;
+}
+
 .links a {
 	position: relative;
 	right: 12px;
@@ -1002,6 +1006,10 @@ img.block-blur, img.nsfw-blur {
 	padding: 3px;
 	border-radius: 5px;
 	font-size: small;
+}
+
+.pbody .postflair {
+	font-size: 11px;
 }
 
 .submitflair {
@@ -1957,6 +1965,10 @@ td.subsentry.subsubscribed {
 
 td.subsentry.blocked {
 	border-left: 4px solid #b40000;
+}
+
+td.subsentry.unsubscribed {
+    border-left: 4px solid transparent;
 }
 
 .sortable th svg {
