Increasing title font size to 18px

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -592,7 +592,7 @@ span#notification.fade {
 	color: #292828e0;
 	text-decoration: none;
 	line-height: 1.5rem;
-	font-size: 1em;
+	font-size: 18px;
 	word-wrap: break-word;
 }
 
